--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,4 @@
-<div>CustomTooltip</div>
+<div appCustomTooltip customTooltipPosistion="top">
+  Salut ici c'est "tooltip"
+  <span class="mon-tooltip" #customTooltipContent> hi je suis tooltip! </span>
+</div>
